--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,12 @@
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
+
+.custom-scrollbar-minimal::-webkit-scrollbar {
+    width: 4px;
+}
+
+.custom-scrollbar-minimal::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.25);
+    border-radius: 999px;
+}
